# ibus-hanjp

./: .gitignore  .gitmodules  CMakeLists.txt  GUIDE.md  LICENSE  README.md
.github/workflows/: cmake.yml
doc/: GFDL  Reference_ko.odt  hanjp-conversion-table-and rules-en-dc18.odt
ibus/: CMakeLists.txt  LICENSE  README  config.h.in  engine.cpp  hanjp.xml.in  hanjpengine.c  hanjpengine.h  main.c  main.cpp
ibus-hanjp/: AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
ibus-hanjp/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
ibus-hanjp/data/: Makefile.in
ibus-hanjp/icons/: Makefile.am
ibus-hanjp/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  engine.c  engine.h  gstringcomp.c  gstringcomp.h  hanjp.xml.in  hanjp.xml.in.in  i18n.h  main.c
ibus/src/: CMakeLists.txt  config.h.in  engine.cpp  engine.h  hanjp.xml.in  main.cpp
libhanjp/: Makefile  hanjp.h  hanjpchar.c  hanjpchar.h  hanjpcharinfo.c  hanjpconv.c  hanjpinputcontext.c  hanjputil.c  libhanjp.pc  libtest.c
libhanjp/keyboard/: hangul-combination-hj.xml  hangul-keyboard-2hj.xml  hangul-keyboard-full.xml
libhanjp_new/: Makefile  a.out  hanjp.h  hanjpchar.c  hanjpchar.h  hanjpeater.c  hanjpeater.h  hanjpinputcontext.c  libtest.c
libhanjp_new/keyboard/: hangul-keyboard-2hj.xml
scm/: hanjp.scm  japanese-hj.scm  kana-phoneme.scm
test/: libtest.c
